# looming_analysis

./: .gitignore  PLAN.md  README.md  analysis.ipynb  example.ipynb  main.py  pyproject.toml
examples/: .gitignore  analysis.example.toml  empty-split.files.example.json  files.example.json  quickstart.py
looming_analysis/: __init__.py  _types.py  cli.py  config.py  dataframe.py  extract.py  files.py  io.py  pipeline.py  responsiveness.py  run_config.py  signal.py
looming_analysis/plots/: __init__.py  _common.py  heading.py  heading_traces.py  iti.py  peak_aligned.py  peak_velocity.py  rates.py  rdp_debug.py  screen_position.py  sham.py  traces.py  turn_direction.py
looming_analysis/plots/debug/: __init__.py  heading_comparison.py  rdp.py
notebooks/: README.md  analysis.ipynb  canton-s.ipynb  compare.ipynb  empty-split.ipynb  quickstart.ipynb
tests/: conftest.py  test_config.py  test_distribution_plot_legends.py  test_extract_heading_trace.py  test_files.py  test_filter_by_iti.py  test_heading_trace_plot.py  test_io.py  test_new_plots.py  test_pipeline.py  test_plot_prerequisites.py  test_responsiveness.py  test_run_config.py  test_sham.py
