[project]
name = "looming-analysis"
version = "0.1.0"
description = "Analyze angular velocity responses to looming stimuli in .braidz recordings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pynumdiff>=0.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["looming_analysis"]
